Fix CSS media query for dark mode.

--- a/main.less
+++ b/main.less
@@ -790,9 +790,9 @@ div.wrm-modal {
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
   .wrm-modal-content {
-      background-color: #282828;
-      color: #d9d9d9;
-      border: 1px solid #54585d;
+    background-color: #282828;
+    color: #d9d9d9;
+    border: 1px solid #54585d;
   }
   .wrm-modal-content-header {
     border-bottom: 1px solid #54585d;
@@ -852,10 +852,6 @@ div.wrm-modal {
     color: #d9d9d9;
     background-color: #282828;
     border: 1px solid #54585d;
-  }
-  .wrm-flex-column {
-    background-color: #282828;
-    color: #d9d9d9;
   }
   .wrm-green {
     color: #8f969c;
